--- a/assets/scss/_nosotros.scss
+++ b/assets/scss/_nosotros.scss
@@ -31,6 +31,7 @@
 
 .secEquipo {
     margin-top: 30px;
+    margin-bottom: 30px;
     width: 100%;
     padding-left: 20px;
     padding-right: 20px;
