--- a/views/blog.html
+++ b/views/blog.html
@@ -170,7 +170,7 @@
 
 <!--Paginas-->
 
-<section class="container secDosBlog">
+<section class="container-fluid secDosBlog">
   <nav aria-label="Page navigation example">
     <ul class="pagination">
       <li class="page-item">
@@ -189,6 +189,8 @@
     </ul>
   </nav>
 </section>
+
+
 
 <!--Footer-->
 
