--- a/views/contacto.html
+++ b/views/contacto.html
@@ -71,23 +71,23 @@
 <!--Segunda Sección/Formulario de Contacto-->
 
 <section class="container-fluid">
-  <div class="d-flex justify-content-around mt-5 mb-5 ml-5 mr-5">
-    <div class="row ">
+  <div class="d-flex justify-content-around">
+    <div class="row mt-5 mb-5 ml-5 mr-5 ">
       <div class="col-md-6">
         <form>
-          <div class="form-group ml-2 mr-2">
+          <div class="form-group ml-2">
             <label for="inputEmail4">Nombre</label>
             <input type="name" class="form-control" id="inputEmail4">
           </div>
-          <div class="form-group mb-2 ml-2 mr-2">
+          <div class="form-group mb-2">
             <label for="inputPassword4">Email</label>
             <input type="email" class="form-control" id="inputEmail4">
           </div>
-          <div class="form-group mb-2 ml-2 mr-2">
+          <div class="form-group mb-2">
             <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
           </div>
-          <div class="form-group mb-2 mr-2 ml-2">
+          <div class="form-group mb-2">
             <label for="inputState">Selecciona Servicio</label>
             <select id="inputState" class="form-control">
               <option selected>Proyecto</option>
@@ -96,7 +96,7 @@
               <option selected>Decoración</option>
             </select>
           </div>
-          <div class="form-group form-check mb-2 ml-2 mr-2">
+          <div class="form-group form-check mb-2">
             <input type="checkbox" class="form-check-input" id="exampleCheck1">
             <label class="form-check-label" for="exampleCheck1">¿Desea recibir Newsletter?</label>
           </div>
