--- a/assets/scss/_contacto.scss
+++ b/assets/scss/_contacto.scss
@@ -3,6 +3,16 @@
 
 /*Contacto*/
 
-
+.sectionUnoContacto {
+    width: 100%;
+    margin-top: 30px;
+    background-image: url('/img/Contacto.png');
+    height: 500px;
+    
+    span {
+        font-weight: 400;
+        font-size: 16px;
+    }
+}
 
 
