--- a/views/contacto.html
+++ b/views/contacto.html
@@ -56,13 +56,13 @@
 
 <!--Primera Sección/Fotografía+Título Principal-->
 
-<section class="row mt-4 ">
-  <div class="p-5 bg-image img-fluid" style="background-image: url('../img/Contacto.png'); height: 500px ;">
-    <div class="w-75 col-xs-12">
-      <h1 class="mb-3">Contacto</h1>
-      <p class="mb-3 font-weight-bolder d-flex justify-content-center secUno">Si quieres contactarnos y cotizar realiza el siguiente formulario con la información solicitada, indicando el asunto y el tipo de servicio que quieres. Recuerda adjuntar un plano si el servicio así lo requiere</p>
+<section class="jumbotron-fluid sectionUnoContacto ">
+  <div class="container-fluid p-5">
+    <div class="w-75 col-md-6">
+      <h1 class="mb-4">¿Necesitas contactarnos?</h1>
+      <p class="mb-4"> <span>Si quieres contactarnos y cotizar realiza el siguiente formulario con la información solicitada, indicando el asunto y el tipo de servicio que quieres.</span></p>
       <p class="lead tranScaleBoton">
-        <a class="btn btn-secondary btn-lg shadow-sm mt-3" href="/index.html" role="button">Volver al Home</a>
+        <a class="btn btn-secondary btn-lg shadow-sm mt-3" href="./views/servicios.html" role="button">Volver al Home</a>
       </p>
     </div>
   </div>
