--- a/views/contacto.html
+++ b/views/contacto.html
@@ -18,7 +18,7 @@
 <!--Menu-->
 
 <header>
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
          <nav class="navbar navbar-expand-lg navbar-light">
              <div class="container-fluid">
@@ -60,7 +60,7 @@
   <div class="container-fluid p-5">
     <div class="w-75 col-md-6">
       <h1 class="mb-4">¿Necesitas contactarnos?</h1>
-      <p class="mb-4"> <span>Si quieres contactarnos y cotizar realiza el siguiente formulario con la información solicitada, indicando el asunto y el tipo de servicio que quieres.</span></p>
+      <p class="mb-4"><span>Si quieres contactarnos y cotizar realiza el siguiente formulario con la información solicitada, indicando el asunto y el tipo de servicio que quieres.</span></p>
       <p class="lead tranScaleBoton">
         <a class="btn btn-secondary btn-lg shadow-sm mt-3" href="./views/servicios.html" role="button">Volver al Home</a>
       </p>
@@ -100,8 +100,8 @@
             <input type="checkbox" class="form-check-input" id="exampleCheck1">
             <label class="form-check-label" for="exampleCheck1">¿Desea recibir Newsletter?</label>
           </div>
-          <button type="submit" class="btn btn-primary">Enviar</button>
-          <button type="submit" class="btn btn-light">Limpiar</button>
+          <a href="./error.html" type="submit" class="btn btn-primary">Enviar</a>
+          <a href="./error.html" type="submit" class="btn btn-light">Limpiar</a>
         </form>
       </div>
       <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 mt-4">
