--- a/assets/scss/_contacto.scss
+++ b/assets/scss/_contacto.scss
@@ -6,7 +6,7 @@
 .sectionUnoContacto {
     width: 100%;
     margin-top: 30px;
-    background-image: url('/img/Contacto.png');
+    background-image: url('../../img/Contacto.png');
     height: 500px;
     
     span {
