--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -6,7 +6,7 @@
 .sectionUno {
     width: 100%;
     margin-top: 30px;
-    background-image: url('/img/index.png');
+    background-image: url('../../img/index.png');
     height: 500px;
     
     span {
