--- a/views/error.html
+++ b/views/error.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Error</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,500&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/css/estilos.css">
 </head>
@@ -20,7 +21,6 @@
                <a href="../index.html" class="btn btn-md shadow-sm btn-dark mt-3">Home</a>
                <a href="../index.html" class="btn btn-md shadow-sm btn-dark mt-3">Ir Atrás</a>
            </div>
-
        </div>
    </section>
 
