--- a/views/servicios.html
+++ b/views/servicios.html
@@ -7,11 +7,12 @@
     initial-scale=1.0">
     <meta name="description" content="Attico Studio conoce nuestros servicios de arquitectura y diseño de interiores">
     <meta name="keywords" content="PROYECTO, REMODELACIÓN, MUEBLES, DECORACIÓN, SERVICIOS">
-    <title>Servicios atticostudio</title>
+    <title>Servicios - AS </title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,500&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/css/estilos.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -75,7 +76,7 @@
 <section class="container-fluid sectionDosSer">
     <h2 class="sectionDosSerTitle">Nuestros Servicios</h2>
     <div class="row g-4">
-      <div class="col-lg-6 col-md-6 col-xs-12 serviciosCenter">
+      <div data-aos="zoom-in-right" class="col-lg-6 col-md-6 col-xs-12 serviciosCenter">
         <div class="card shadow" style="width: 18rem;">
           <img src="../img/ServicioProyecto1.png" class="card-img-top" alt="...">
           <div class="card-body">
@@ -84,7 +85,7 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-6 col-md-6 col-xs-12 serviciosCenter">
+      <div data-aos="zoom-in-right" class="col-lg-6 col-md-6 col-xs-12 serviciosCenter">
         <div class="card shadow"  style="width: 18rem;">
           <img src="../img/ServicioRemodelación1.png" class="card-img-top" alt="...">
           <div class="card-body">
@@ -93,7 +94,7 @@
           </div>
         </div>
       </div>
-      <div class="col serviciosCenter">
+      <div data-aos="zoom-in-right" class="col serviciosCenter">
         <div class="card shadow" style="width: 18rem;">
           <img src="../img/ServicioMuebles1.png" class="card-img-top" alt="...">
           <div class="card-body">
@@ -102,7 +103,7 @@
           </div>
         </div>
       </div>
-      <div class="col serviciosCenter">
+      <div data-aos="zoom-in-right" class="col serviciosCenter">
         <div class="card shadow" style="width: 18rem;">
           <img src="../img/ServicioDecoración1.png" class="card-img-top" alt="...">
           <div class="card-body">
@@ -158,6 +159,12 @@
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
+
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+<script>
+  AOS.init();
+</script>
 
 </body>
 </html>
