--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -5,13 +5,12 @@
 
 .sectionUno {
     width: 100%;
-    margin-top: 30px;
-    background-image: url('../../img/index.png');
+    margin-top: 10px;
+    background-image: url('../../img/indexprincipal.png');
     height: 500px;
     
     span {
-        font-weight: 400;
-        font-size: 16px;
+        font-weight: 500;
     }
 }
 
