--- a/assets/scss/_tipografia.scss
+++ b/assets/scss/_tipografia.scss
@@ -11,9 +11,9 @@ body {
 
 
 h1 {
-    color:#513D59;
+    color:#77A8A8 ;
     font-size: 3em;
-    font-weight:500;
+    font-weight:600;
 }
 
 h2 {
