--- a/views/contacto.html
+++ b/views/contacto.html
@@ -62,7 +62,7 @@
       <h1 class="mb-4">¿Necesitas contactarnos?</h1>
       <p class="mb-4"><span>Si quieres contactarnos y cotizar realiza el siguiente formulario con la información solicitada, indicando el asunto y el tipo de servicio que quieres.</span></p>
       <p class="lead tranScaleBoton">
-        <a class="btn btn-secondary btn-lg shadow-sm mt-3" href="./views/servicios.html" role="button">Volver al Home</a>
+        <a class="btn btn-secondary btn-lg shadow-lg mt-3" href="./views/servicios.html" role="button">Volver al Home</a>
       </p>
     </div>
   </div>
