--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -8,6 +8,9 @@
     margin-top: 10px;
     background-image: url('../../img/indexprincipal.png');
     height: 500px;
+    width: 100%;
+    padding-left: 20px;
+    padding-right: 20px;
     
     span {
         font-weight: 500;
