--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -367,10 +367,12 @@ figure.effect-sadie:hover p {
   width: 100%;
   margin-top: 30px;
   background-image: url("../../img/contactoprincipal.png");
-  height: 500px; }
+  height: 500px;
+  width: 100%;
+  padding-left: 20px;
+  padding-right: 20px; }
   .sectionUnoContacto span {
-    font-weight: 400;
-    font-size: 16px; }
+    font-weight: 500; }
 
 /* Estilos Footer */
 footer {
