--- a/assets/scss/_contacto.scss
+++ b/assets/scss/_contacto.scss
@@ -8,10 +8,12 @@
     margin-top: 30px;
     background-image: url('../../img/contactoprincipal.png');
     height: 500px;
+    width: 100%;
+    padding-left: 20px;
+    padding-right: 20px;
     
     span {
-        font-weight: 400;
-        font-size: 16px;
+        font-weight: 500;
     }
 }
 
