--- a/views/contacto.html
+++ b/views/contacto.html
@@ -22,7 +22,7 @@
         <div class="row">
          <nav class="navbar navbar-expand-lg navbar-light">
              <div class="container-fluid">
-               <a class="navbar-brand" href="../index.html"><img src="../img/LogoAtticoMorado.svg" width="165px" alt=""></a>
+               <a class="navbar-brand" href="../index.html"><img src="../img/LogoAtticoGris.svg" width="165px" alt=""></a>
                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                  <span class="navbar-toggler-icon"></span>
                </button>
@@ -57,9 +57,9 @@
 <!--Primera Sección/Fotografía+Título Principal-->
 
 <section class="jumbotron-fluid sectionUnoContacto ">
-  <div class="container-fluid p-5">
+  <div class="container-fluid pt-5">
     <div class="w-75 col-md-6">
-      <h1 class="mb-4">¿Necesitas contactarnos?</h1>
+      <h1 class="mb-4">Contacto</h1>
       <p class="mb-4"><span>Si quieres contactarnos y cotizar realiza el siguiente formulario con la información solicitada, indicando el asunto y el tipo de servicio que quieres.</span></p>
       <p class="lead tranScaleBoton">
         <a class="btn btn-secondary btn-lg shadow-lg mt-3" href="./views/servicios.html" role="button">Volver al Home</a>
@@ -72,7 +72,7 @@
 
 <section class="container-fluid">
   <div class="d-flex justify-content-around">
-    <div class="row mt-5 mb-5 ml-5 mr-5 ">
+    <div class="row p-5 ">
       <div class="col-md-6">
         <form>
           <div class="form-group ml-2">
@@ -101,7 +101,7 @@
             <label class="form-check-label" for="exampleCheck1">¿Desea recibir Newsletter?</label>
           </div>
           <a href="./error.html" type="submit" class="btn btn-primary">Enviar</a>
-          <a href="./error.html" type="submit" class="btn btn-light">Limpiar</a>
+          <a href="./error.html" type="submit" class="btn btn-secondary">Limpiar</a>
         </form>
       </div>
       <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 mt-4">
