corregí formulario de contacto

--- a/views/contacto.html
+++ b/views/contacto.html
@@ -71,11 +71,11 @@
 <!--Segunda Sección/Formulario de Contacto-->
 
 <section class="container-fluid">
-  <div class="d-flex justify-content-around">
-    <div class="row p-5 ">
+  <div class="p-3 d-flex justify-content-around">
+    <div class="row">
       <div class="col-md-6">
         <form>
-          <div class="form-group ml-2">
+          <div class="form-group mb-2">
             <label for="inputEmail4">Nombre</label>
             <input type="name" class="form-control" id="inputEmail4">
           </div>
@@ -104,8 +104,10 @@
           <a href="./error.html" type="submit" class="btn btn-secondary">Limpiar</a>
         </form>
       </div>
-      <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 mt-4">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3330.7000520725983!2d-70.57491498559494!3d-33.404988780786965!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662ced89f33db9b%3A0x3d8edbdab97e31b8!2sRosario%20Nte%2C%20Las%20Condes%2C%20Regi%C3%B3n%20Metropolitana!5e0!3m2!1ses-419!2scl!4v1622646669207!5m2!1ses-419!2scl" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe> 
+      <div class="col-md-6 p-4 d-block ">
+        <p><strong> Nos encontramos en Rosario Norte 588, Las Condes.</strong></p>
+        <p><strong>contacto@atticostudio.cl</strong></p>
+        <p><strong>+56912345678</strong></p>
       </div>
     </div>
   </div> 
