--- a/views/contacto.html
+++ b/views/contacto.html
@@ -80,7 +80,7 @@
             <input type="name" class="form-control" id="inputEmail4">
           </div>
           <div class="form-group mb-2">
-            <label for="inputPassword4">Email</label>
+            <label for="inputEmail1">Email</label>
             <input type="email" class="form-control" id="inputEmail4">
           </div>
           <div class="form-group mb-2">
@@ -105,9 +105,9 @@
         </form>
       </div>
       <div class="col-md-6 p-4 d-block ">
-        <p><strong> Nos encontramos en Rosario Norte 588, Las Condes.</strong></p>
-        <p><strong>contacto@atticostudio.cl</strong></p>
-        <p><strong>+56912345678</strong></p>
+        <p><span> Nos encontramos en Rosario Norte 588, Las Condes.</span></p>
+        <p><span>contacto@atticostudio.cl</span></p>
+        <p><span>+56912345678</span></p>
       </div>
     </div>
   </div> 
@@ -139,13 +139,13 @@
       <hr class="clearfix w-100 d-md-none">
       <div class="col-md-2 col-lg-2 text-center mx-auto my-4">
         <h5>Redes Sociales</h5>
-          <a type="button" class="btn-floating btn-fb">
+          <a href="https://www.google.com/" type="button" class="btn-floating btn-fb">
             <i class="fab fa-facebook-f"><img src="../img/facebook.svg" width="30px"alt=""></i>
           </a>
-          <a type="button" class="btn-floating btn-tw">
+          <a href="https://www.google.com/" type="button" class="btn-floating btn-tw">
             <i class="fab fa-twitter"><img src="../img/instagram.svg" width="30px"alt=""></i>
           </a>
-          <a type="button" class="btn-floating btn-gplus">
+          <a href="https://www.google.com/" type="button" class="btn-floating btn-gplus">
             <i class="fab fa-google-plus-g"><img src="../img/linkedin.svg" width="30px" alt=""></i>
           </a>
       </div>
@@ -155,6 +155,8 @@
     © Todos los derechos reservados, 2021.
   </div> 
 </footer>
+
+<!--Scripts-->
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
 
