--- a/views/proyectos.html
+++ b/views/proyectos.html
@@ -109,7 +109,7 @@
       <figure class="effect-sadie">
         <img class="img-fluid rounded mx-auto d-block" src="../img/Galeria10.png" alt="">
       <figcaption>
-        <h3>Dormitorio <span>Las Leñas</span></h3> 
+        <h3>Hotel <span>Las Leñas</span></h3> 
         <p>Desarrollo de mobiliario para habitación principal.</p>
         <a href="#"></a>
       </figcaption>
@@ -119,7 +119,7 @@
       <figure class="effect-sadie">
         <img class="img-fluid mx-auto d-block" src="../img/BañoModerno.png" alt="">
       <figcaption>
-        <h3>Baño <span>Las Leñas</span></h3> 
+        <h3>Baños <span>Las Leñas</span></h3> 
         <p>Remodelación de baño para casa en Las Leñas.</p>
         <a href="#"></a>
       </figcaption>
@@ -214,13 +214,13 @@
       <hr class="clearfix w-100 d-md-none">
       <div class="col-md-2 col-lg-2 text-center mx-auto my-4">
         <h5>Redes Sociales</h5>
-          <a type="button" class="btn-floating btn-fb">
+          <a href="https://www.google.com/" type="button" class="btn-floating btn-fb">
             <i class="fab fa-facebook-f"><img src="../img/facebook.svg" width="30px"alt=""></i>
           </a>
-          <a type="button" class="btn-floating btn-tw">
+          <a href="https://www.google.com/" type="button" class="btn-floating btn-tw">
             <i class="fab fa-twitter"><img src="../img/instagram.svg" width="30px"alt=""></i>
           </a>
-          <a type="button" class="btn-floating btn-gplus">
+          <a href="https://www.google.com/" type="button" class="btn-floating btn-gplus">
             <i class="fab fa-google-plus-g"><img src="../img/linkedin.svg" width="30px" alt=""></i>
           </a>
       </div>
@@ -230,6 +230,8 @@
     © Todos los derechos reservados, 2021.
   </div> 
 </footer>
+
+<!--Scripts-->
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
 
