--- a/views/servicios.html
+++ b/views/servicios.html
@@ -64,9 +64,9 @@
 
 <section class="container-fluid secUnoServicios d-flex justify-content-center">
  <div class="row secTextoServicios">
-    <div class="col-lg-12 col-md-12 col-xs-12 mt-5">
+    <div class="col-lg-12 col-md-12 col-xs-12 mt-1">
       <h2 class="mb-3">Qué hacemos</h2>
-      <p>Somos un <span>equipo multidisciplinario</span> capaz de abarcar distintas competencias. Tenemos una visión global desde la <span>arquitectura en conjunto con diseñadores</span> para obtener un resultado integral.</p>
+      <p>A través de nuestro equipo multidisciplinario de arquitectos y diseñadores, <span>ofrecemos un servicio integral y variado.</span> Nos destacamos por desarrollar un método de trabajo que <span>permite al cliente tomar decisiones sobre propuestas de diseño concretas,</span> de sus necesidades.</p>
     </div>
   </div>
 </section>
@@ -141,13 +141,13 @@
       <hr class="clearfix w-100 d-md-none">
       <div class="col-md-2 col-lg-2 text-center mx-auto my-4">
         <h5>Redes Sociales</h5>
-          <a type="button" class="btn-floating btn-fb">
+          <a href="https://www.google.com/" type="button" class="btn-floating btn-fb">
             <i class="fab fa-facebook-f"><img src="../img/facebook.svg" width="30px"alt=""></i>
           </a>
-          <a type="button" class="btn-floating btn-tw">
+          <a href="https://www.google.com/" type="button" class="btn-floating btn-tw">
             <i class="fab fa-twitter"><img src="../img/instagram.svg" width="30px"alt=""></i>
           </a>
-          <a type="button" class="btn-floating btn-gplus">
+          <a href="https://www.google.com/" type="button" class="btn-floating btn-gplus">
             <i class="fab fa-google-plus-g"><img src="../img/linkedin.svg" width="30px" alt=""></i>
           </a>
       </div>
@@ -158,10 +158,10 @@
   </div> 
 </footer>
 
+<!--Scripts-->
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
-
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-
 <script>
   AOS.init();
 </script>
