--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -1,43 +1,4 @@
 @charset "UTF-8";
-/* Estilos Genericos */
-body {
-  font-family: Poppins;
-  color: #2D2D2D; }
-
-h1 {
-  color: #6BBAB9;
-  font-size: 3em;
-  font-weight: 600; }
-
-h2 {
-  font-size: 2rem;
-  font-weight: 500;
-  color: #3F3F3F; }
-
-h3 {
-  font-size: 1,1rem;
-  font-weight: 400;
-  color: #3F3F3F; }
-
-h4 {
-  font-size: 0,5rem;
-  font-weight: 400;
-  color: #3F3F3F; }
-
-p {
-  font-size: 12pt;
-  font-weight: 300;
-  text-align: left; }
-
-li {
-  font-size: 14pt;
-  font-weight: 300;
-  list-style: none;
-  color: white; }
-
-a {
-  text-decoration: none; }
-
 /* Estilos Section Servicios*/
 .sectionUno {
   width: 100%;
@@ -47,8 +8,6 @@ a {
   width: 100%;
   padding-left: 20px;
   padding-right: 20px; }
-  .sectionUno span {
-    font-weight: 500; }
 
 .sectionDos {
   width: 100%;
@@ -125,8 +84,8 @@ a {
 /*Servicios*/
 .tituloServicios {
   width: 100%;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
   margin-top: 20px;
   margin-bottom: 20px; }
 
@@ -134,16 +93,12 @@ a {
   width: 100%;
   padding-left: 20px;
   padding-right: 20px;
-  margin-top: 15px;
-  margin-bottom: 20px;
   background-color: #F3F3F3;
-  height: 250px; }
+  height: 280px; }
 
 .secTextoServicios {
+  margin-top: 20px;
   width: 400px; }
-
-.secTextoServicios span {
-  font-weight: 500; }
 
 .sectionDosSer {
   width: 100%;
@@ -153,14 +108,14 @@ a {
   margin-bottom: 30px; }
 
 .sectionDosSerTitle {
-  margin-bottom: 50px;
-  margin-top: 50px; }
+  margin-bottom: 40px;
+  margin-top: 40px; }
 
 /*Proyectos*/
 .tituloProyectos {
   width: 100%;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
   margin-top: 20px;
   margin-bottom: 30px; }
 
@@ -290,23 +245,21 @@ figure.effect-sadie:hover p {
 /*Nosotros*/
 .tituloNosotros {
   width: 100%;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
   margin-top: 20px;
   margin-bottom: 20px; }
 
 .secUnoNosotros {
   background-color: #F3F3F3;
-  height: 250px;
+  height: 280px;
   width: 100%;
   padding-left: 20px;
   padding-right: 20px; }
 
 .secTextoNosotros {
   width: 400px;
-  margin-top: 10px; }
-  .secTextoNosotros span {
-    font-weight: 500; }
+  margin-top: 20px; }
 
 .secEquipo {
   margin-top: 30px;
@@ -316,8 +269,8 @@ figure.effect-sadie:hover p {
   padding-right: 20px; }
 
 .secEquipoTitle {
-  margin-bottom: 30px;
-  margin-top: 30px; }
+  margin-bottom: 40px;
+  margin-top: 40px; }
 
 .texEquipo {
   width: 200px;
@@ -371,8 +324,48 @@ figure.effect-sadie:hover p {
   width: 100%;
   padding-left: 20px;
   padding-right: 20px; }
-  .sectionUnoContacto span {
-    font-weight: 500; }
+
+/* Tipografías */
+body {
+  font-family: Poppins;
+  color: #2D2D2D; }
+
+h1 {
+  color: #4AA8A7;
+  font-size: 3em;
+  font-weight: 600; }
+
+h2 {
+  font-size: 2rem;
+  font-weight: 500;
+  color: #3F3F3F; }
+
+h3 {
+  font-size: 1,1rem;
+  font-weight: 400;
+  color: #3F3F3F; }
+
+h4 {
+  font-size: 0,5rem;
+  font-weight: 400;
+  color: #3F3F3F; }
+
+p {
+  font-size: 12pt;
+  font-weight: 300;
+  text-align: left; }
+
+li {
+  font-size: 14pt;
+  font-weight: 300;
+  list-style: none;
+  color: white; }
+
+a {
+  text-decoration: none; }
+
+span {
+  font-weight: 500; }
 
 /* Estilos Footer */
 footer {
@@ -388,6 +381,7 @@ footer h5 {
 footer li {
   color: white; }
 
+/* Página Error*/
 .errorBack {
   background-color: #F3F3F3; }
 
