--- a/assets/scss/estilos.scss
+++ b/assets/scss/estilos.scss
@@ -1,12 +1,90 @@
-@import "tipografia";
+
 @import "home";
 @import "servicios";
 @import "proyectos";
 @import "nosotros";
 @import "blog";
 @import "contacto";
-@import "footer";
 
+/* Tipografías */
+
+body {
+    font-family: Poppins;
+    
+    color: #2D2D2D ;
+}
+
+
+h1 {
+    color:#4AA8A7;
+    font-size: 3em;
+    font-weight:600;
+}
+
+h2 {
+    font-size: 2rem;
+    font-weight: 500;
+    color:#3F3F3F;
+}
+
+h3 {
+    font-size: 1,1rem;
+    font-weight: 400;
+    color:#3F3F3F ;
+}
+
+h4 {
+    font-size: 0,5rem;
+    font-weight: 400;
+    color:#3F3F3F ;
+}
+
+p {
+    font-size: 12pt;
+    font-weight: 300;
+    text-align: left;
+}
+
+li {
+    font-size: 14pt;
+    font-weight: 300;
+    list-style: none;
+    color: white;
+    
+}
+
+a {
+	text-decoration: none;
+}
+
+span {
+    font-weight: 500;
+}
+
+/* Estilos Footer */
+ 
+footer {
+    background-color: #2D2D2D ;
+    color: white;
+    
+}
+
+footer  {
+
+    h5 {
+    font-size: 14pt;
+    color: #ffffff;
+    font-weight: 400;
+    text-decoration: none;
+    }
+
+    li {
+        color: white;
+    }
+
+}
+
+/* Página Error*/
 
 .errorBack {
     background-color:  #F3F3F3;
