--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -63,7 +63,7 @@
   <div class="row secTextoNosotros">
     <div class="col-lg-12 col-md-12 col-xs-12 mt-1">
       <h2 class="mb-3">Quienes Somos</h2>
-      <p>Somos un estudio de arquitectura de interior dedicado al diseño para remodelaciones y decoración de interiores. <span> Nuestra pasión es crear hogares cálidos y llenos de vida,</span> con historias que nos invitan a compartir con nuestros seres queridos y que transmitan emociones.</p>
+      <p>Somos un estudio de arquitectura de interior dedicado al diseño para remodelaciones y decoración de interiores. <span> Nuestra pasión es crear hogares cálidos y llenos de vida,</span> con historias que nos invitan a compartir con nuestros seres queridos, en espaciones que transmitan emociones.</p>
     </div>
   </div>
 </section>   
@@ -148,13 +148,13 @@
       <hr class="clearfix w-100 d-md-none">
       <div class="col-md-2 col-lg-2 text-center mx-auto my-4">
         <h5>Redes Sociales</h5>
-          <a type="button" class="btn-floating btn-fb">
+          <a href="https://www.google.com/" type="button" class="btn-floating btn-fb">
             <i class="fab fa-facebook-f"><img src="../img/facebook.svg" width="30px"alt=""></i>
           </a>
-          <a type="button" class="btn-floating btn-tw">
+          <a href="https://www.google.com/" type="button" class="btn-floating btn-tw">
             <i class="fab fa-twitter"><img src="../img/instagram.svg" width="30px"alt=""></i>
           </a>
-          <a type="button" class="btn-floating btn-gplus">
+          <a href="https://www.google.com/" type="button" class="btn-floating btn-gplus">
             <i class="fab fa-google-plus-g"><img src="../img/linkedin.svg" width="30px" alt=""></i>
           </a>
       </div>
@@ -164,6 +164,8 @@
     © Todos los derechos reservados, 2021.
   </div> 
 </footer>
+
+<!--Scripts-->
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
 
