--- a/views/contacto.html
+++ b/views/contacto.html
@@ -60,7 +60,7 @@
   <div class="container-fluid pt-5">
     <div class="w-75 col-md-6">
       <h1 class="mb-4">Contacto</h1>
-      <p class="mb-4"><span>Si quieres contactarnos y cotizar realiza el siguiente formulario con la información solicitada, indicando el asunto y el tipo de servicio que quieres.</span></p>
+      <p class="mb-3"><span>Si quieres contactarnos y cotizar realiza el siguiente formulario con la información solicitada, indicando el asunto y el tipo de servicio que quieres.</span></p>
       <p class="lead tranScaleBoton">
         <a class="btn btn-secondary btn-lg shadow-lg mt-3" href="./views/servicios.html" role="button">Volver al Home</a>
       </p>
@@ -71,7 +71,7 @@
 <!--Segunda Sección/Formulario de Contacto-->
 
 <section class="container-fluid">
-  <div class="p-3 d-flex justify-content-around">
+  <div class="p-5 d-flex justify-content-around">
     <div class="row">
       <div class="col-md-6">
         <form>
@@ -104,7 +104,7 @@
           <a href="./error.html" type="submit" class="btn btn-secondary">Limpiar</a>
         </form>
       </div>
-      <div class="col-md-6 p-4 d-block ">
+      <div class="col-md-6 p-5">
         <p><span> Nos encontramos en Rosario Norte 588, Las Condes.</span></p>
         <p><span>contacto@atticostudio.cl</span></p>
         <p><span>+56912345678</span></p>
