--- a/views/proyectos.html
+++ b/views/proyectos.html
@@ -90,7 +90,7 @@
         <img class="img-fluid mx-auto d-block" src="../img/TerrazaMadera.png" alt="">
         <figcaption>
           <h3>Terraza <span>Pacheco</span></h3> 
-          <p>Remodelación Terraza Región del Maule.</p>
+          <p>Remodelación terraza y quincho en Región del Maule.</p>
           <a href="#"></a>
         </figcaption>
       </figure>
@@ -110,7 +110,7 @@
         <img class="img-fluid rounded mx-auto d-block" src="../img/Galeria10.png" alt="">
       <figcaption>
         <h3>Hotel <span>Las Leñas</span></h3> 
-        <p>Desarrollo de mobiliario para habitación principal.</p>
+        <p>Decoración de habitaciones para Hotel en Las Leñas.</p>
         <a href="#"></a>
       </figcaption>
       </figure>
@@ -119,8 +119,8 @@
       <figure class="effect-sadie">
         <img class="img-fluid mx-auto d-block" src="../img/BañoModerno.png" alt="">
       <figcaption>
-        <h3>Baños <span>Las Leñas</span></h3> 
-        <p>Remodelación de baño para casa en Las Leñas.</p>
+        <h3>Baño <span>San Damian</span></h3> 
+        <p>Remodelación de baño para casa en San Damian.</p>
         <a href="#"></a>
       </figcaption>
       </figure>
@@ -170,7 +170,7 @@
         <img class="img-fluid mx-auto d-block" src="../img/Galeria7.png" alt="">
       <figcaption>
         <h3>Cocina <span>San Fernando</span></h3> 
-        <p>Remodelación de cocina para casa de campo en San Fermando.</p>
+        <p>Remodelación de cocina estilo moderno para casa en San Fermando.</p>
         <a href="#"></a>
       </figcaption>
       </figure>
