--- a/views/servicios.html
+++ b/views/servicios.html
@@ -7,18 +7,15 @@
     initial-scale=1.0">
     <meta name="description" content="Attico Studio conoce nuestros servicios de arquitectura y diseño de interiores">
     <meta name="keywords" content="PROYECTO, REMODELACIÓN, MUEBLES, DECORACIÓN, SERVICIOS">
-    <title>Servicios - AS </title>
+    <title>Servicios - AtticoStudio </title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,500&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/css/estilos.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
-
 <body>
-
 <!--Menu-->
-
 <header>
     <div class="container-fluid">
         <div class="row">
@@ -55,13 +52,11 @@
         </div>
     </div>    
 </header>
-
-<!--Servicios Primer Sección-->
-
+<!--Servicios Primer Sección - Titulo-->
 <section class="container-fluid">
   <h1 class="tituloServicios">Servicios</h1>
 </section>
-
+<!--Servicios Primer Sección-->
 <section class="container-fluid secUnoServicios d-flex justify-content-center">
  <div class="row secTextoServicios">
     <div class="col-lg-12 col-md-12 col-xs-12 mt-1">
@@ -70,9 +65,7 @@
     </div>
   </div>
 </section>
-
 <!--Descripción 4 Servicios -->
-
 <section class="container-fluid sectionDosSer">
     <h2 class="sectionDosSerTitle">Nuestros Servicios</h2>
     <div class="row g-4">
@@ -81,7 +74,7 @@
           <img src="../img/ServicioProyecto1.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h3 class="card-title">Proyecto</h3>
-            <p class="card-text">Puedes solicitar la asesoría para la realización de tu nueva obra o renovación del hogar, es decir, la construcción de varios espacios. Dentro de este servicio ofrecemos distintas visitas e instancias de maqueta y visualización de render. </p>
+            <p class="card-text">Armamos un proyecto completo para que puedas montarlo con tus propias manos desde cero. Ofrecemos toda la asesoría y mano de obra para obras nuevas o renovaciones totales. Dentro de este servicio existen distintas instancias de visitas en obra y visualización 2D y 3D del proyecto.</p>
           </div>
         </div>
       </div>
@@ -90,7 +83,7 @@
           <img src="../img/ServicioRemodelación1.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h3 class="card-title">Remodelación</h3>
-            <p class="card-text">Si no quieres partir de cero, puedes solicitar la renovación de una habitación, como cocina, baño, terraza, lo que tu requieras. Dentro de este servicio ofrecemos 3 visitas y diferentes render para visualizar el resultado de tu obra.</p>
+            <p class="card-text">Nosotros te asesoramos y construimos lo que requieras para la remodelación de tus espacios, si no quieres partir de cero y solo necesitas un nuevo aire. En este servicio también ofrecemos visitas y asesoramiento durante toda la obra, y visualizaciones previas de las propuestas.</p>
           </div>
         </div>
       </div>
@@ -99,7 +92,7 @@
           <img src="../img/ServicioMuebles1.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h3 class="card-title">Muebles</h3>
-            <p class="card-text">Como estudio también contamos un taller de carpintería para realizar los muebles que requieran los proyectos grandes. Pero también realizamos muebles a pedido, para clientes que requieren muebles únicos</p>
+            <p class="card-text">Nuestro estudio cuenta con un taller de carpintería para realizar los muebles que nuestros proyectos requieran, y así desarrollar propuestas integrales. También diseñamos y fabricamos muebles a pedido, únicos para cliente y sus necesidades. </p>
           </div>
         </div>
       </div>
@@ -108,15 +101,13 @@
           <img src="../img/ServicioDecoración1.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h3 class="card-title">Decoración</h3>
-            <p class="card-text">Si solo requieres la asesoría para decorar tu hogar, nosotros te ayudamos buscando los muebles, revestimientos y adornos más exclusivos y a buen precio del mercado.</p>
+            <p class="card-text">Si solo requieres la asesoría y montaje para decorar tu hogar, te ofrecemos nuestro servicio de interiorismo donde nos encargamos de todo, asesoría, compra y/o montaje de los revestimientos, adornos, muebles, lo que necesites para lograr el hogar soñado. </p>
           </div>
         </div>
       </div>
     </div>
 </section>
-
 <!--Footer-->
-    
 <footer class="page-footer font-small mdb-color lighten-3 pt-4">
   <div class="container text-md-left">   
     <div class="row">
@@ -139,7 +130,7 @@
             </ul>
       </div>
       <hr class="clearfix w-100 d-md-none">
-      <div class="col-md-2 col-lg-2 text-center mx-auto my-4">
+      <div class="col-md-4 col-lg-2 text-center mx-auto my-4">
         <h5>Redes Sociales</h5>
           <a href="https://www.google.com/" type="button" class="btn-floating btn-fb">
             <i class="fab fa-facebook-f"><img src="../img/facebook.svg" width="30px"alt=""></i>
@@ -157,14 +148,11 @@
     © Todos los derechos reservados, 2021.
   </div> 
 </footer>
-
 <!--Scripts-->
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
   AOS.init();
 </script>
-
 </body>
 </html>
