--- a/views/blog.html
+++ b/views/blog.html
@@ -1,24 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Attico Studio revisa nuestra sección sobre tendencias en arquitectura y diseño de interiores.">
     <meta name="keywords" content="TENDENCIA, DISEÑO, ARQUITECTURA, NOVEDADES">
-    <title>Blog - AS</title>
+    <title>Blog - AtticoStudio</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,500&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="../assets/css/estilos.css">
 </head>
-
 <body>
-
 <!--Menu-->
-
 <header>
     <div class="container-fluid">
         <div class="row">
@@ -55,18 +51,14 @@
         </div>
     </div>   
 </header>
-
 <!--Primera Sección Blog-->
-
 <Section class="secUnoBlog container-fluid">
     <h1>Blog</h1>
     <div class="secBlogTexto">
         <p>Infórmate de las últimas tendencias en diseño de interiores y arquitectura, sé el primero en conocer las novedades de productos, formatos y estilos además de nuestros eventos profesionales y sociales.</p>
     </div>
 </Section>
-
 <!--Segunda Sección/Visualización Artículos-->
-
 <section class="container secDosBlog">
     <div class="row">
 <!--Primera Fila Blog-->
@@ -167,9 +159,7 @@
         </div>
   </div>
 </section>
-
 <!--Paginas-->
-
 <section class="container-fluid secDosBlog">
   <nav aria-label="Page navigation example">
     <ul class="pagination">
@@ -189,11 +179,7 @@
     </ul>
   </nav>
 </section>
-
-
-
 <!--Footer-->
-
 <footer class="page-footer font-small mdb-color lighten-3 pt-4">
   <div class="container text-md-left">   
     <div class="row">
@@ -216,7 +202,7 @@
             </ul>
       </div>
       <hr class="clearfix w-100 d-md-none">
-      <div class="col-md-2 col-lg-2 text-center mx-auto my-4">
+      <div class="col-md-4 col-lg-2 text-center mx-auto my-4">
         <h5>Redes Sociales</h5>
           <a href="https://www.google.com/" type="button" class="btn-floating btn-fb">
             <i class="fab fa-facebook-f"><img src="../img/facebook.svg" width="30px"alt=""></i>
@@ -234,10 +220,7 @@
     © Todos los derechos reservados, 2021.
   </div> 
 </footer>
-
 <!--Scripts-->
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>     
- 
 </body>
 </html>
