--- a/views/proyectos.html
+++ b/views/proyectos.html
@@ -6,17 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content= "Attico Studio conoce nuestro portafolio de proyectos realizados.">
     <meta name="keywords" content="PROYECTO, COCINA, BAÑO,TERRAZA, MUEBLES, DECORACIÓN, CASA, DEPARTAMENTO">
-    <title>Proyectos - AS</title>
+    <title>Proyectos - AtticoStudio</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,500&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/css/estilos.css">
 </head>
-
 <body>
-
 <!--Menu-->    
-
 <header>
     <div class="container-fluid">
         <div class="row">
@@ -53,15 +50,11 @@
         </div>
     </div>   
 </header>
-
 <!--Primera Sección/Titulo-->
-
 <section class="container-fluid">  
   <h1 class="tituloProyectos">Proyectos</h1> 
 </section>
-
 <!--Segunda Sección/Galeria de Proyectos-->
-
 <section class="container"> 
   <div class="row marginImgPro">
     <div class="col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
@@ -187,9 +180,7 @@
     </div> 
   </div>
 </section>
-
 <!--Footer-->
-
 <footer class="page-footer font-small mdb-color lighten-3 pt-4">
   <div class="container text-md-left">   
     <div class="row">
@@ -212,7 +203,7 @@
             </ul>
       </div>
       <hr class="clearfix w-100 d-md-none">
-      <div class="col-md-2 col-lg-2 text-center mx-auto my-4">
+      <div class="col-md-4 col-lg-2 text-center mx-auto my-4">
         <h5>Redes Sociales</h5>
           <a href="https://www.google.com/" type="button" class="btn-floating btn-fb">
             <i class="fab fa-facebook-f"><img src="../img/facebook.svg" width="30px"alt=""></i>
@@ -230,10 +221,7 @@
     © Todos los derechos reservados, 2021.
   </div> 
 </footer>
-
 <!--Scripts-->
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
-
 </body>
 </html>
