última corrección ortografía

--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -86,7 +86,7 @@
       </div>
       <div class="card-body">
         <h3 class="card-title">Sebastián Moya</h3>
-        <p class="card-text">Arquitecto, U. de Chile. Socio fundador de Attico Studio</p>
+        <p class="card-text">Arquitecto, U. de Chile. Socio fundador de Attico Studio.</p>
       </div>
     </div>
   </div>
