--- a/views/proyectos.html
+++ b/views/proyectos.html
@@ -62,7 +62,7 @@
         <img class="img-fluid mx-auto d-block" src="../img/CocinaVintaje.png" alt="">
         <figcaption>
           <h3>Cocina <span>Las Condes</span></h3> 
-          <p>Proyecto cocina estilo vintage casa las Las Condes.</p>
+          <p>Proyecto cocina estilo vintage casa Las Condes.</p>
           <a href="#"></a>
         </figcaption>
       </figure>
@@ -77,7 +77,6 @@
         </figcaption>
       </figure>
     </div>
-
     <div class="col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
       <figure class="effect-sadie">
         <img class="img-fluid mx-auto d-block" src="../img/TerrazaMadera.png" alt="">
