--- a/views/contacto.html
+++ b/views/contacto.html
@@ -55,7 +55,7 @@
   <div class="container-fluid pt-5">
     <div class="w-75 col-md-6">
       <h1 class="mb-4">Contacto</h1>
-      <p class="mb-3"><span>Si quieres contactarnos y cotizar realiza el siguiente formulario con la información solicitada, indicando el asunto y el tipo de servicio que quieres.</span></p>
+      <p class="mb-3"><span>Si quieres contactarnos y cotizar realiza el siguiente formulario con la información solicitada, indicando el tipo de servicio que quieres.</span></p>
       <p class="lead tranScaleBoton">
         <a class="btn btn-secondary btn-lg shadow-lg mt-3" href="./views/servicios.html" role="button">Volver al Home</a>
       </p>
